--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <title>Humaniz</title>
     <link
       rel="apple-touch-icon"
@@ -80,8 +85,39 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <nav class="nav"></nav>
-    <header class="header"></header>
+    <header class="header">
+      <img
+        src="/resources/img/logo-small.png"
+        alt="Humaniz logo"
+        class="header__ logo"
+      />
+      <form action="#" class="search">
+        <input type="text" class="search__input" placeholder="검색" />
+        <button class="search__button">
+          <svg class="search__icon">
+            <use xlink:href="/resources/icon/sprite.svg#icon-search"></use>
+          </svg>
+        </button>
+      </form>
+      <div class="user-nav">
+        <a href="#" class="login">LOGIN</a>
+        <ul class="user-nav__menu">
+          <li class="user-nav__item">
+            <a href="#" class="user-nav__link">My Page</a>
+          </li>
+          <li class="user-nav__item">
+            <a href="#" class="user-nav__link">Log out</a>
+          </li>
+        </ul>
+      </div>
+      <div class="header-nav">
+        <button class="header-nav__menu">
+          <svg class="header-nav__icon">
+            <use xlink:href="/resources/icon/sprite.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
     <main>
       <section class="section-slider"></section>
       <section class="section-new"></section>
