Add: header section (in progress)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </button>
         </form>
         <div class="user-nav">
-          <a href="#" class="login">Login</a>
+          <a href="#" class="user-nav__link">Login</a>
           <ul class="user-nav__menu">
             <li class="user-nav__item">
               <a href="#" class="user-nav__link">MyPage</a>
