Add: hero section (in progress)

--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
     <meta name="theme-color" content="#ffffff" />
   </head>
   <body>
-    <div class="container">
       <header class="header">
         <img
           src="/resources/img/logo-small.png"
@@ -123,14 +122,15 @@
         <div class="hero">
             <div class="hero__text">
               <h1 class="heading-primary">
-                읽기만 해도 똑똑해지는 인문학 컨텐츠 구독 서비스
+                읽기만 해도 똑똑해지는 <br>인문학 컨텐츠 구독 서비스
               </h1>
               <p class="paragraph">지금 휴머니즈를 구독하고 재미있게 똑똑해지세요!</p>
+              <a href="#" class="btn btn__subscribe">멤버십 구독하기</a>
             </div>
             <div class="hero__photo">
               <img src="/resources/img/header-home.png" alt="Home hero" class="hero__img">
             </div>
-          </div>
+        </div>
         <section class="section-slider"></section>
         <section class="section-new"></section>
         <section class="section-category"></section>
@@ -140,6 +140,5 @@
         <section class="section-about"></section>
       </main>
       <footer class="footer"></footer>
-    </div>
   </body>
 </html>
