Add: category section

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </header>
     <div class="hero">
       <div class="hero__text">
-        <h1 class="heading-primary">
+        <h1 class="heading-1">
           읽기만 해도 똑똑해지는 <br />인문학 컨텐츠 구독 서비스
         </h1>
         <p class="paragraph">지금 휴머니즈를 구독하고 재미있게 똑똑해지세요!</p>
@@ -138,7 +138,7 @@
     <main>
       <section class="section-slider"></section>
       <section class="section-new">
-        <h2 class="heading-secondary">NEW 컨텐츠</h2>
+        <h2 class="heading-2">NEW 컨텐츠</h2>
         <div class="home-contents">
           <div class="contents-box">
             <img
@@ -172,10 +172,32 @@
           </div>
         </div>
       </section>
-      <section class="section-category"></section>
-      <section class="section-hot"></section>
-      <section class="section-event"></section>
-      <section class="section-favor"></section>
+      <section class="section-category">
+          <h3 class="heading-3">주제별 카테고리</h3>
+            <div class="category__box">
+              <img src="/resources/img/category-1.png" alt="Category image 1" class="category__box__img"></img>
+              <p class="category__box__name">카테고리</p>
+            </div>
+            <div class="category__box">
+              <img src="/resources/img/category-2.png" alt="Category image 2" class="category__box__img"></img>
+              <p class="category__box__name">카테고리</p>
+            </div>
+            <div class="category__box">
+              <img src="/resources/img/category-3.png" alt="Category image 3" class="category__box__img"></img>
+              <p class="category__box__name">카테고리</p>
+            </div>
+            <div class="category__box">
+              <img src="/resources/img/category-4.png" alt="Category image 4" class="category__box__img"></img>
+              <p class="category__box__name">카테고리</p>
+            </div>
+            <div class="category__box">
+              <img src="/resources/img/category-5.png" alt="Category image 5" class="category__box__img"></img>
+              <p class="category__box__name">카테고리</p>
+            </div>
+          </section>
+          <section class="section-hot"></section>
+          <section class="section-event"></section>
+          <section class="section-favor"></section>
       <section class="section-about"></section>
     </main>
     <footer class="footer"></footer>
