Add: banner section

--- a/index.html
+++ b/index.html
@@ -173,32 +173,76 @@
         </div>
       </section>
       <section class="section-category">
-          <h3 class="heading-3">주제별 카테고리</h3>
-            <div class="category__box">
-              <img src="/resources/img/category-1.png" alt="Category image 1" class="category__box__img"></img>
-              <p class="category__box__name">카테고리</p>
-            </div>
-            <div class="category__box">
-              <img src="/resources/img/category-2.png" alt="Category image 2" class="category__box__img"></img>
-              <p class="category__box__name">카테고리</p>
-            </div>
-            <div class="category__box">
-              <img src="/resources/img/category-3.png" alt="Category image 3" class="category__box__img"></img>
-              <p class="category__box__name">카테고리</p>
-            </div>
-            <div class="category__box">
-              <img src="/resources/img/category-4.png" alt="Category image 4" class="category__box__img"></img>
-              <p class="category__box__name">카테고리</p>
-            </div>
-            <div class="category__box">
-              <img src="/resources/img/category-5.png" alt="Category image 5" class="category__box__img"></img>
-              <p class="category__box__name">카테고리</p>
-            </div>
-          </section>
-          <section class="section-hot"></section>
-          <section class="section-event"></section>
-          <section class="section-favor"></section>
-      <section class="section-about"></section>
+        <h3 class="heading-3">주제별 카테고리</h3>
+        <div class="category__box">
+          <img
+            src="/resources/img/category-1.png"
+            alt="Category image 1"
+            class="category__box__img"
+          />
+          <p class="category__box__name">카테고리</p>
+        </div>
+        <div class="category__box">
+          <img
+            src="/resources/img/category-2.png"
+            alt="Category image 2"
+            class="category__box__img"
+          />
+          <p class="category__box__name">카테고리</p>
+        </div>
+        <div class="category__box">
+          <img
+            src="/resources/img/category-3.png"
+            alt="Category image 3"
+            class="category__box__img"
+          />
+          <p class="category__box__name">카테고리</p>
+        </div>
+        <div class="category__box">
+          <img
+            src="/resources/img/category-4.png"
+            alt="Category image 4"
+            class="category__box__img"
+          />
+          <p class="category__box__name">카테고리</p>
+        </div>
+        <div class="category__box">
+          <img
+            src="/resources/img/category-5.png"
+            alt="Category image 5"
+            class="category__box__img"
+          />
+          <p class="category__box__name">카테고리</p>
+        </div>
+      </section>
+      <section class="section-hot"></section>
+      <section class="section-event">
+        <div class="banner banner__event">
+          <div class="banner__event__description">
+            <p class="banner__event__description--name">친구추천 이벤트</p>
+            <h2 class="banner__event__description--title">
+              지금 친구에게 휴머니즈를 추천하면 <br />
+              친구도 나도 한달 구독료 공짜!
+            </h2>
+            <p class="banner__event__description--duration">
+              2021.04.01 ~ 2021.05.31
+            </p>
+            <p class="banner__event__description--participants">
+              멤버십 구독 회원
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="section-favor"></section>
+      <section class="section-about">
+        <div class="banner banner__about">
+          <h2 class="heading-2 banner__about__title">
+            누구나 가볍게 즐기는 인문학 컨텐츠 플랫폼, <br />
+            휴머니즈에 대해서 더 알고 싶다면?
+          </h2>
+          <a href="#" class="btn btn__about">자세히 보기 <span>&gt;</span></a>
+        </div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
