Add: footer section

--- a/index.html
+++ b/index.html
@@ -244,6 +244,66 @@
         </div>
       </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="#" class="footer__link">회사소개</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">채용정보</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">개인정보처리방침</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">이용약관</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">공지사항</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">고객센터</a>
+          </li>
+          <li class="footer__item">
+            <a href="#" class="footer__link">도움말</a>
+          </li>
+        </ul>
+      </div>
+      <hr />
+      <div class="footer__box">
+        <div class="footer__box--logo">
+          <img
+            src="/resources/img/logo-footer.png"
+            alt="Footer logo"
+            class="footer__logo"
+          />
+          <span>(주)휴머니즈</span>
+        </div>
+        <div class="footer__box--sns">
+          <svg class="footer__sns__icon">
+            <use xlink:href="/resources/icon/sprite.svg#icon-facebook"></use>
+          </svg>
+          <svg class="footer__sns__icon">
+            <use xlink:href="/resources/icon/sprite.svg#icon-twitter"></use>
+          </svg>
+          <svg class="footer__sns__icon">
+            <use xlink:href="/resources/icon/sprite.svg#icon-instagram"></use>
+          </svg>
+          <svg class="footer__sns__icon">
+            <use xlink:href="/resources/icon/sprite.svg#icon-youtube"></use>
+          </svg>
+        </div>
+      </div>
+      <p class="footer__text">
+        대표자: 안솔 | 사업자번호: 000-00-00000 | 통신판매업: 2021-00000-0000
+        <br />
+        주소: 서울특별시 아무개구 아무개로 000 아무개건물 000-0호 | 대표번호:
+        02-000-0000 | 이메일: info@humaniz.com
+      </p>
+      <p class="footer__copyright">
+        Copyright &copy; Humaniz. All rights reserved.
+      </p>
+    </footer>
   </body>
 </html>
