Add: main-slider section (in progress)

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/resources/slick/slick.css" />
+    <link rel="stylesheet" href="/resources/slick/slick-theme.css" />
     <title>Humaniz</title>
     <link
       rel="apple-touch-icon"
@@ -136,7 +138,28 @@
       </div>
     </div>
     <main>
-      <section class="section-slider"></section>
+      <section class="section-slider">
+        <div class="main-slider">
+          <div class="slide">
+            <img
+              src="/resources/img/slide-1.png"
+              alt="Slide Photo 1"
+              class="slide__img"
+            />
+            <div class="slide__description">
+              <p class="slide__description__name">지금 보면 딱인 컨텐츠</p>
+              <h2 class="heading-2 slide__description__title">
+                Amet minim mollitnondeserunt ullamco lopwdon sitaliquad
+              </h2>
+              <ul class="slide__description__hashtags--list">
+                <li class="slide__description__hashtags--item">#해시태그</li>
+                <li class="slide__description__hashtags--item">#해시태그</li>
+                <li class="slide__description__hashtags--item">#해시태그</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="section-new">
         <h2 class="heading-2">NEW 컨텐츠</h2>
         <div class="home-contents">
@@ -1003,5 +1026,14 @@
         Copyright &copy; Humaniz. All rights reserved.
       </p>
     </footer>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-1.11.0.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
+    ></script>
+    <script src="/resources/slick/slick.min.js"></script>
   </body>
 </html>
