--- a/index.html
+++ b/index.html
@@ -137,55 +137,55 @@
         />
       </div>
     </div>
-    <main>
-      <section class="section-slider">
-        <div class="main-slider">
-          <div class="slide">
-            <img
-              src="/resources/img/slide-1.png"
-              alt="Slide Photo 1"
-              class="slide__img"
-            />
-            <div class="slide__description">
-              <p class="slide__description__name">지금 보면 딱인 컨텐츠</p>
-              <h2 class="heading-2 slide__description__title">
-                Amet minim mollitnon deseruntullamco lopwdon sitaliquad
-              </h2>
-              <ul class="slide__description__hashtags--list">
-                <li class="slide__description__hashtags--item">#해시태그</li>
-                <li class="slide__description__hashtags--item">#해시태그</li>
-                <li class="slide__description__hashtags--item">#해시태그</li>
-              </ul>
-            </div>
-          </div>
-          <div class="slide">
-            <img
-              src="/resources/img/slide-1.png"
-              alt="Slide Photo 1"
-              class="slide__img"
-            />
-            <div class="slide__description">
-              <p class="slide__description__name">공지사항</p>
-              <h2 class="heading-2 slide__description__title">
-                Amet minim mollitnon deseruntullamco lopwdon sitaliquad
-              </h2>
-            </div>
-          </div>
-          <div class="slide">
-            <img
-              src="/resources/img/slide-1.png"
-              alt="Slide Photo 1"
-              class="slide__img"
-            />
-            <div class="slide__description">
-              <p class="slide__description__name">친구추천 이벤트</p>
-              <h2 class="heading-2 slide__description__title">
-                Amet minim mollitnon deseruntullamco lopwdon sitaliquad
-              </h2>
-            </div>
+    <div class="main-slider">
+      <div class="slider">
+        <div class="slide">
+          <img
+            src="/resources/img/slide-1.png"
+            alt="Slide Photo 1"
+            class="slide__img"
+          />
+          <div class="slide__description">
+            <p class="slide__description__name">지금 보면 딱인 컨텐츠</p>
+            <h2 class="heading-2 slide__description__title">
+              Amet minim mollitnon deseruntullamco lopwdon sitaliquad
+            </h2>
+            <ul class="slide__description__hashtags--list">
+              <li class="slide__description__hashtags--item">#해시태그</li>
+              <li class="slide__description__hashtags--item">#해시태그</li>
+              <li class="slide__description__hashtags--item">#해시태그</li>
+            </ul>
           </div>
         </div>
-      </section>
+        <div class="slide">
+          <img
+            src="/resources/img/slide-1.png"
+            alt="Slide Photo 1"
+            class="slide__img"
+          />
+          <div class="slide__description">
+            <p class="slide__description__name">공지사항</p>
+            <h2 class="heading-2 slide__description__title">
+              Amet minim mollitnon deseruntullamco lopwdon sitaliquad
+            </h2>
+          </div>
+        </div>
+        <div class="slide">
+          <img
+            src="/resources/img/slide-1.png"
+            alt="Slide Photo 1"
+            class="slide__img"
+          />
+          <div class="slide__description">
+            <p class="slide__description__name">친구추천 이벤트</p>
+            <h2 class="heading-2 slide__description__title">
+              Amet minim mollitnon deseruntullamco lopwdon sitaliquad
+            </h2>
+          </div>
+        </div>
+      </div>
+    </div>
+    <main>
       <section class="section-new">
         <h2 class="heading-2">NEW 컨텐츠</h2>
         <div class="home-contents">
@@ -1063,7 +1063,7 @@
     <script src="/resources/slick/slick.min.js"></script>
     <script type="text/javascript">
       $(function () {
-        $(".main-slider").slick({
+        $(".slider").slick({
           dots: true,
           infinite: true,
           speed: 300,
