--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
         </form>
         <div class="user-nav">
           <a href="#" class="user-nav__link">Login</a>
-          <ul class="user-nav__menu">
-            <li class="user-nav__item">
+          <ul class="user-nav__sub">
+            <li class="user-nav__sub__item">
               <a href="#" class="user-nav__link">MyPage</a>
             </li>
-            <li class="user-nav__item">
+            <li class="user-nav__sub__item">
               <a href="#" class="user-nav__link">Logout</a>
             </li>
           </ul>
@@ -1065,28 +1065,6 @@
       src="//code.jquery.com/jquery-migrate-1.2.1.min.js"
     ></script>
     <script src="/resources/slick/slick.min.js"></script>
-    <script type="text/javascript">
-      $(function () {
-        $(".slider").slick({
-          dots: true,
-          infinite: true,
-          speed: 300,
-          fade: true,
-          cssEase: "linear",
-          autoplay: true,
-        });
-
-        // $("body").waypoint(
-        //   function (direction) {
-        //     if (direction === "down") {
-        //       $(".header").addClass("sticky");
-        //     } else {
-        //       $(".header").removeClass("sticky");
-        //     }
-        //   },
-        //   { offset: "50px" }
-        // );
-      });
-    </script>
+    <script src="/js/script.js"></script>
   </body>
 </html>
